@@ -40,6 +40,7 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Dan Fandrich, Peter Silva, Arve Knudsen, Michael Wallner, Toshiyuki Maezawa,
- Ingmar Runge, Ates Goral, David McCreedy, Jari Sundell
+ Ingmar Runge, Ates Goral, David McCreedy, Jari Sundell, Georg Horn,
+ Gisle Vanem, Yang Tse
 
         Thanks! (and sorry if I forgot to mention someone)
